# robot-cooperation-failure-test

./: .gitignore
src/map_launcher/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/map_launcher/map/: map.yaml
src/multi_turtlebots_nav/: package.xml  setup.cfg  setup.py
src/multi_turtlebots_nav/launch/: amcl.launch.py  nav2.launch.py  navigation.launch.py
src/multi_turtlebots_nav/param/: amcl_params.yaml  nav2_params.yaml
src/multi_turtlebots_sim/: package.xml  setup.cfg  setup.py
src/multi_turtlebots_sim/launch/: main.launch.py  one_robot.launch.py  robots.launch.py  test.launch.py
src/robot-failure/: package.xml  setup.cfg  setup.py
src/turtlebot3_description/: CMakeLists.txt  package.xml
src/turtlebot3_description/urdf/: turtlebot3_burger.gazebo.xacro
