<?xml version="1.0"?>
<package format="3">
  <name>map_launcher</name>
  <version>1.0.0</version>
  <description>Pacote para lançar mapas e configurações de navegação.</description>
  <maintainer email="jackson-aguiar@todo.todo">jackson-aguiar</maintainer>
  
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>