<?xml version="1.0"?>
<package format="3">
  <name>turtlebot3_description</name>
  <version>1.0.0</version>
  <description>Descrição URDF/XACRO para o TurtleBot3 Burger.</description>
  <maintainer email="seu_email@exemplo.com">Seu Nome</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>